--- a/backend/package.json
+++ b/backend/package.json
@@ -16,7 +16,11 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^4.18.2",
-    "mongoose": "^8.17.1"
+    "mongoose": "^8.17.1",
+    "multer": "^1.4.5-lts.2",
+    "xlsx": "^0.18.5",
+    "ajv": "^8.17.1",
+    "ajv-formats": "^3.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
