--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,17 @@
 MONGODB_CONNECTION_STRING = mongodb+srv://sangdon3011_db_user:WNG1OjzVmFllOhRF@cluster0.ivimcdg.mongodb.net/vocab?retryWrites=true&w=majority&appName=Cluster0
-PORT = 5001
+PORT = 5001# Server & Database
+
+# Import pipeline
+IMPORT_MAX_SIZE_MB=5
+IMPORT_ENRICH_BATCH=10
+IMPORT_STORAGE_DIR=./storage/imports
+IMPORT_TEMP_DIR=./storage/tmp
+
+# AI provider configuration
+AI_PROVIDER=gemini
+AI_FALLBACKS=
+GEMINI_API_KEY=AIzaSyDAS5Ab-mq-NaFWTWa47TcUSVo6G-ORk8M
+GEMINI_MODEL=gemini-2.5-flash
+AI_TIMEOUT_MS=45000
+AI_RETRY_LIMIT=3
+
