--- a/backend/.env
+++ b/backend/.env
@@ -11,7 +11,7 @@ IMPORT_TEMP_DIR=./storage/tmp
 AI_PROVIDER=gemini
 AI_FALLBACKS=
 GEMINI_API_KEY=AIzaSyDAS5Ab-mq-NaFWTWa47TcUSVo6G-ORk8M
-GEMINI_MODEL=gemini-2.5-flash
-AI_TIMEOUT_MS=45000
-AI_RETRY_LIMIT=3
+GEMINI_MODEL=gemini-2.5-pro
+AI_TIMEOUT_MS=200000
+AI_RETRY_LIMIT=5
 
