--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,6 @@
 MONGODB_CONNECTION_STRING = mongodb+srv://sangdon3011_db_user:WNG1OjzVmFllOhRF@cluster0.ivimcdg.mongodb.net/vocab?retryWrites=true&w=majority&appName=Cluster0
 PORT = 5001# Server & Database
+NODE_ENV = production
 
 # Import pipeline
 IMPORT_MAX_SIZE_MB=5
