--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "doc": "docs"
   },
   "scripts": {
-    "build": "cd backend && npm install && cd ../frontend && npm install && npm run build",
+    "build": "cd backend && npm ci && cd ../frontend && npm ci --include=dev && npm run build",
     "start": "cd backend && npm start"
   },
   "repository": {
