--- a/backend/package.json
+++ b/backend/package.json
@@ -13,14 +13,15 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "ajv": "^8.17.1",
+    "ajv-formats": "^3.0.1",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^4.18.2",
     "mongoose": "^8.17.1",
     "multer": "^1.4.5-lts.2",
-    "xlsx": "^0.18.5",
-    "ajv": "^8.17.1",
-    "ajv-formats": "^3.0.1"
+    "natural": "^8.1.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
