--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,10 +1,10 @@
 # Server & Database
 PORT=5001
-MONGODB_CONNECTION_STRING=mongodb+srv://username:password@cluster.example.mongodb.net/vocab
+MONGODB_CONNECTION_STRING=mongodb+srv://username:password@cluster.example.mongodb.net/vocab?retryWrites=true&w=majority&appName=Cluster0
+NODE_ENV=production
 
 # Import pipeline
 IMPORT_MAX_SIZE_MB=5
-# Batch enrich nhỏ giúp giảm timeout/cắt phản hồi từ AI khi nhập nhiều từ
 IMPORT_ENRICH_BATCH=10
 IMPORT_STORAGE_DIR=./storage/imports
 IMPORT_TEMP_DIR=./storage/tmp
@@ -13,7 +13,9 @@ IMPORT_TEMP_DIR=./storage/tmp
 AI_PROVIDER=gemini
 AI_FALLBACKS=
 GEMINI_API_KEY=your_gemini_api_key
-GEMINI_MODEL=gemini-2.5-flash
-# Tăng timeout & retry để cải thiện tỷ lệ thành công cho batch lớn
-AI_TIMEOUT_MS=45000
-AI_RETRY_LIMIT=3
+GEMINI_MODEL=gemini-3-flash-preview
+AI_TIMEOUT_MS=200000
+AI_RETRY_LIMIT=5
+
+# Build configuration
+NPM_CONFIG_PRODUCTION=false
