--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,7 +26,9 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.65.0",
+    "react-markdown": "^10.1.0",
     "react-router": "^7.8.1",
+    "remark-gfm": "^4.0.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.12",
